with the latest versions of Password Safe. For a short description of
Password Safe, please see the accompanying README.txt file. For more 
information on the product and the project, please visit
http://passwordsafe.sourceforge.net. Details about changes to older
releases may be found in the file ChangeLog.txt.

Bugs fixed in 3.18.1
====================
[2813295] 'Browse + Autotype' system tray menu items fixed - thanks to
Vasily for reporting and sending the patches for this.
[] Fix crash error using External Editor on Notes field.

New Features for 3.18
=====================
[] Add minidump support for release builds so that we can try to solve
issues with more information than Windows normally provides.

New Features for 3.18
=====================
[2793283] Allow entry to override doubleclick setting.
[2793280] Browse+Autotype added to configurable double click actions.
[] Implement Virtual Keyboards for multilingual passphrase entry.
[] DragBar now has ToolTips to inform user of its use.
[] User can close the currently open database via the System Tray
menu.
[] Improved Merge reporting.

Changes to Existing Features in 3.18
====================================
[] New toolbar icon set has been replaced with icons based on famfamfam's
silk set.
[] Reworked Add and Edit dialogs into Property Pages.

Bugs fixed in 3.18
==================
[2795428] Browse+ on Toolbar now inactive if no URL present
[2795427] Duplicate of "Display Subset of Password" removed from Context
Menu (right-click on entry).
[2789873] Status bar now updated properly after Browse to URL and other
actions that copied data to the clipboard.
[2782413] No longer crashes when loading 0302 formatted headers (from
~v3.08).
[2779705] Reserved shortcuts (Ctrl+Q, Alt+F4 and F1) now work.
[] Run Command now correctly copied via Drag & Drop.
[] Allow all fields to be selected for Compare function.
[] Fixed crash if renaming an entry to one that already exists.

Bugs fixed in 3.17
==================